# SETU

./: .gitignore  Dockerfile  README.md  config  docker-compose.yml  postman_collection.json  pyproject.toml  render.yaml
app/: config.py  db.py  deps.py  ingest.py  main.py  queries.py  schemas.py
app/routers/: events.py  health.py  reconciliation.py  transactions.py
docs/: api.md  data-model.md  deployment.md  idempotency.md  reconciliation.md  testing.md  tradeoffs.md
scripts/: load_sample_data.py
sql/: schema.sql
tests/: conftest.py  factory.py  test_api.py  test_idempotency.py  test_reconciliation.py
